# maqi

./: Cargo.toml  LICENSE  README.md  build.zig  deps.zig  gyro.zzz
src/: application.rs  client.rs  email.rs  input.rs  lib.zig  main.rs  main.zig  term.rs  terminal.rs  ui.rs  utils.rs
src/client/: client.rs  emailclient.rs  imap.rs  mod.rs
src/client/imap/: client.rs  mod.rs  parser.rs  scanner.rs  types.rs
src/imap/: Client.zig  Parser.zig  client.rs  dummy.rs  error.rs  mod.rs  parser.rs  scanner.rs  tag.rs  tokens.rs  types.rs
src/imap/command/: any.rs  authenticated.rs  mod.rs  not_authenticated.rs
src/imap/response/: authenticated.rs  flags.rs  mod.rs  not_authenticated.rs  response.rs  scanner.rs
src/ui/: interface.rs  mailbox.rs  mod.rs  prompt.rs  report.rs  tabline.rs
