[package]
name = "maqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.14"
simplelog = "0.11.1"
unicode-segmentation = "1.8.0"
