[package]
name = "maqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.20"
log = "0.4.14"
simplelog = "0.11.1"
unicode-segmentation = "1.8.0"
nom = "7.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
openssl = "0.10.38"

[target.'cfg(not(target_os = "macos"))'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
